# Hubbard2leg-dynamic

./: CMakeLists.txt
plot/: CalA_k_omega.m  MyFourierTrans.m  PlotSpectrumFunctionColorFigure.m  ReadSpinCorrData.m  SymmetrizedFourierTrans.m
src/: dmrg.cpp  mpogen.cpp  my_measure.h  myutil.cpp  myutil.h  operators.cpp  operators.h  params.json  params_case.h  qldouble.h  static_measure1.cpp  tdvp.cpp
